# randomized-deletion

./: LICENSE.txt  README.md  TODO  pyproject.toml  requirements.txt
configs/certify-exp/: malconv-byte_deletion_99.5-header-0.05-10-40.yaml  malconv-insn_deletion_99.5-header-0.05-10-40.yaml  malconv-original-header-0.05-1-0.yaml
configs/models/: malconv-byte_deletion_99.5-header.yaml  malconv-insn_deletion_99.5-header.yaml  malconv-original-header.yaml
configs/repeat-forward-exp/: malconv-byte_deletion_99.5-header-50.yaml  malconv-insn_deletion_99.5-header-50.yaml  malconv-original-header-1.yaml
data/: README.md
docker/: Dockerfile  README.md  deploy.py  requirements.txt
run_scripts/: run.sh  task-full.sh  task1-train.sh  task2-repeat_forward.sh  task3-fp_curve.sh  task4-certify-repeat_forward.sh
src/: certify_exp-repeat_forward.py  fp_curve-repeat_forward.py  preprocess_pe.py  repeat_forward_exp.py  train.py  utils.py
src/torchmalware/: ghidra_interface.py  types.py  utils.py
src/torchmalware/certification/: __init__.py  certified_malconv.py  certify.py  deletion_mech.py  masking_mech.py  null_perturbation.py  perturbation.py  utils.py
src/torchmalware/datasets/: __init__.py  binary.py  csv_dataset.py  datasetfolder.py  malware.py  raw_pe.py  utils.py
src/torchmalware/metadata/: __init__.py  addr_ranges.py  binary_path.py  exe_section_ranges.py  header_size.py  metadata.py  offset_mapping.py
src/torchmalware/models/: __init__.py  malconv.py  utils.py
src/torchmalware/transforms/: IDA_INSN.txt  X86_INSN_SET.txt  functional.py  functional_bytes.py  functional_tensor.py  transforms.py  util.py
