[project]
name = "torchmalware"
version = "0.0.1"
description = "A package for certifiably robust malware detection"
readme = "README.md"
requires-python = ">=3.8"
license-files = { paths = ["LICENSE.txt"] }
authors = [
  { name = "Redacted", email = "Redacted" },
  { name = "Redacted", email = "Redacted" },
]
maintainers = [
  { name = "Redacted", email = "Redacted" },
]
keywords = [
  "malware detection", "robust machine learning", "certified robustness", "randomized smoothing", "PyTorch",
]
dependencies = [
  'tqdm~=4.62.3',
  'pandas~=1.3.4',
  'pefile~=2021.5.24',
  'statsmodels~=0.13.1',
  'pytest~=6.2.5',
  'torch~=1.11.0',
  'jpype1~=1.3.0',
  'pathos~=0.2.8',
  'numpy',
  'scipy',
]

[project.urls]
Issues = "https://github.com/Dovermore/rsdel-malware/issues"
"Source code" = "https://github.com/Dovermore/rsdel-malware"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/torchmalware"]
