[project]
name = "torchmalware"
version = "1.0.0"
description = "A package for certifiably robust malware detection"
readme = "README.md"
requires-python = ">=3.10, <3.11"
license-files = { paths = ["LICENSE.txt"] }
authors = [
  { name = "Zhuoqun Huang", email = "calvin.huang@unimelb.edu.au" },
  { name = "Neil Marchant", email = "nmarchant@unimelb.edu.au" },
]
maintainers = [
  { name = "Zhuoqun Huang", email = "calvin.huang@unimelb.edu.au" },
]
keywords = [
  "malware detection", "robust machine learning", "certified robustness", "randomized smoothing", "PyTorch",
]
dependencies = [
  'tqdm~=4.62.3',
  'pandas~=1.3.4',
  'pefile~=2021.5.24',
  'statsmodels~=0.13.1',
  'torch~=2.1.0+cu118',
  'torchvision~=0.16.0+cu118',
  'jpype1~=1.3.0',
  'pathos~=0.2.8',
  'numpy',
  'scipy==1.9.1',
  'pyyaml==6.0.0',
]

[project.urls]
Issues = "https://github.com/Dovermore/randomized-deletion/issues"
"Source code" = "https://github.com/Dovermore/randomized-deletion"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/torchmalware"]
